[package]
name = "blaze"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
config = { version = "0.15.19", features = ["toml"] }
dotenvy = "0.15.7"
futures = "0.3.31"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12.5"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tdf = { version = "0.4.0", features = ["bytes"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
uuid = { version = "1.20.0", features = ["v4"] }
